# PatchForge

./: .gitignore  00_START_HERE.txt  COMPLETION_REPORT.md  INDEX.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STATUS_REPORT.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  README_DIFF.md
core/src/: compress.rs  diff.rs  lib.rs  patch.rs  types.rs  verify.rs
examples/: README.md
gui/: README.md  __init__.py  main.py
tests/: README.md
